<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="title_activity_detail_course">Detail Movie</string>
    <string name="title_activity_detail_tv">Detail TV</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dateline">Dateline</string>
    <string name="description_module">Deskripsi Movie</string>
    <string name="description_tv">Deskripsi TV</string>
    <string name="movie">Movie</string>
    <string name="fav_movie">Fav Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="fav_tv_show">Fav TV </string>
    <string name="menu_bookmark">bookmark</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="release">Release %s</string>
</resources>
